# private_chatroom

./: .gitmodules  README.md
client/: meson.build
client/src/main/: .#server_response_manager.cpp  client.cpp  client.h  client_connection_exception.cpp  command_exception.cpp  command_manager.cpp  command_manager.h  command_result.h  main.cpp  message.cpp  message.h  operation_enum.cpp  operation_enum.h  result_enum.cpp  result_enum.h  server_response_exception.cpp  server_response_manager.cpp  server_response_manager.h  user_advice_enum.cpp  user_advice_enum.h  user_input.cpp  user_input.h
client/src/main/view/: #user_interface.h#  screen.cpp  screen.h  scroller.cpp  user_interface.cpp  user_interface.h
client/src/view/: screen.h
client/subprojects/jsoncpp-1.9.6/: .meson-subproject-wrap-hash.txt
client/subprojects/packagecache/: tmp6gntzrxp  tmp8r8u1a9t
cliente/: meson.build
cliente/src/main/myp/files/: Cliente.cpp  Cliente.h  EstadoCliente.cpp  EstadoCliente.cpp~  EstadoCliente.h  MensajeJson.cpp  MensajeJson.h  PeticionesJson.h  ResultadoServidor.cpp  ResultadoServidor.h  TipoCliente.cpp~  TipoCliente.h  TipoCliente.h~  TipoPeticion.h  TipoPeticion.h~  TipoServidor.cpp  TipoServidor.h  TipoServidor.h~  main.cpp
null/: Chatroom.drawio
server/: meson.build
server/src/chatroom/main/: #server.hpp#  .#server.hpp
server/src/main/: #server.cpp#  .#server.cpp  client.cpp  client.h  invalid_operation_exception.cpp  json_controller.cpp  json_controller.h  main.cpp  operation.cpp  operation.h  request_manager.cpp  request_manager.h  request_response.cpp  request_response.h  room.cpp  room.h  room_exception.cpp  server.cpp  server.h  user_status.cpp  user_status.h
servidor/: meson.build
servidor/src/main/myp/files/: #ManejaPeticionCliente.cpp#  .#ManejaPeticionCliente.cpp  .#Servidor.cpp  Cuarto.cpp  Cuarto.h  EstadoCliente.cpp~  EstadoCliente.h~  ManejaPeticionCliente.cpp  ManejaPeticionCliente.cpp~  ManejaPeticionCliente.h  ManejaPeticionCliente.h~  ResultadoServidor.cpp  ResultadoServidor.h  Servidor.cpp  Servidor.h  TipoCliente.cpp  TipoCliente.h  TipoServidor.cpp  TipoServidor.h  Usuario.cpp  Usuario.h  main.cpp
